Using GenericRepositories and Specification Pattern. Adding ProductToReturnDto, AutoMapper, MakeProductUrl works.

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source =eCommerce.db"
-  }
+  },
+  "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/"
 }
