--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source =eCommerce.db"
   },
-  "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/"
+  "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/",
+  "ClientSideUrl": "https://localhost:4200"
 }
