--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.3",
+    "ngx-bootstrap": "^10.2.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
