adding navbar, getting the data from the api

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,6 +8,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source =eCommerce.db"
   },
-  "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/",
-  "ClientSideUrl": "https://localhost:4200"
+  "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/"
 }
