--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.1.0",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
+    "firebase": "^9.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.3",
     "ngx-bootstrap": "^10.2.0",
