--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^9.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
