--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.3",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
