--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source =eCommerce.db"
+    "DefaultConnection": "Data Source =eCommerce.db",
+    "Redis": "localhost:/"
   },
   "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/"
 }
