modifying some files to best

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source =eCommerce.db",
-    "Redis": "localhost:/"
+    "Redis": "127.0.0.1:6379, abortConnect=false"
   },
   "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/"
 }
