--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.2.3",
+    "cuid": "^3.0.0",
     "firebase": "^9.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.3",
