--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source =eCommerce.db",
+    "IdentityConnection": "Data Source =identity.db",
     "Redis": "127.0.0.1:6379, abortConnect=false"
   },
   "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/"
