adding jwt token to the api

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,13 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source =eCommerce.db",
     "IdentityConnection": "Data Source =identity.db",
     "Redis": "127.0.0.1:6379, abortConnect=false"
+  },
+  "Token": {
+    "Key": "an enough secret key",
+    "Issuer": "https://localhost:5001"
   },
   "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/"
 }
