Finishing order's api part

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source =eCommerce.db",
-    "IdentityConnection": "Data Source =identity.db",
+    "DefaultConnection": "Host=localhost; Port=5432; Database=dataBaseTesting; Username=postgres; Password=P@ssw0rd;",
+    "IdentityConnection": "Host=localhost; Port=5432; Database=IdentityDBTesting; Username=postgres; Password=P@ssw0rd;",
     "Redis": "127.0.0.1:6379, abortConnect=false"
   },
   "Token": {
