prepare for deploying

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Port=5432; Database=dataBaseTesting; Username=postgres; Password=P@ssw0rd;",
-    "IdentityConnection": "Host=localhost; Port=5432; Database=IdentityDBTesting; Username=postgres; Password=P@ssw0rd;",
-    "Redis": "127.0.0.1:6379, abortConnect=false"
+    "DefaultConnection": "Host=db.xsjlhcipzrqmxkklrnzp.supabase.co; Port=5432; Database=postgres; Username=postgres; Password=subaPasePasseCommerce;",
+    "IdentityConnection": "Host=db.xsjlhcipzrqmxkklrnzp.supabase.co; Port=5432; Database=postgres; Username=postgres; Password=subaPasePasseCommerce;",
+    "Redis": "redis-19062.c239.us-east-1-2.ec2.cloud.redislabs.com:19062,password=cXzvmxw7CjNWa9SOn44PkcgW3TzIyXVY"
   },
   "Token": {
     "Key": "an enough secret key",
