--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.3",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-cookie-service": "^16.0.0",
     "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.0.2",
     "popper.js": "^1.16.1",
