update the project

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -14,5 +14,5 @@
     "Key": "an enough secret key",
     "Issuer": "https://localhost:5001"
   },
-  "CloudUrl": "https://res.cloudinary.com/xso25/image/upload/v1674751157/"
+  "CloudUrl": "https://localhost:5001/"
 }
