--- a/.github/workflows/XSO25eCommerce.yml
+++ b/.github/workflows/XSO25eCommerce.yml
@@ -5,13 +5,13 @@ on:
     - master
 env:
   AZURE_WEBAPP_NAME: XSO25eCommerce
-  AZURE_WEBAPP_PACKAGE_PATH: API/publish
+  AZURE_WEBAPP_PACKAGE_PATH: API\publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
   WORKING_DIRECTORY: API
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET SDK
@@ -32,7 +32,7 @@ jobs:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     steps:
     - name: Download artifact from build job
@@ -44,5 +44,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.XSO25eCommerce_8F9F }}
+        publish-profile: ${{ secrets.XSO25eCommerce_454D }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
