make app to swith to prod api url in prod mode

--- a/client/angular.json
+++ b/client/angular.json
@@ -48,6 +48,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/env/environment.ts",
+                  "with": "src/env/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
